add pokemon type chip component

--- a/src/utils/internationalization/langs/en.json
+++ b/src/utils/internationalization/langs/en.json
@@ -1,3 +1,24 @@
 {
-    "title": "The Pokedex"
+    "title": "The Pokedex",
+
+    "HomeFeaturedPokemon": "Featured Pokemon today",
+    
+    "normal": "Normal",
+    "fire": "Fire",
+    "water": "Water",
+    "grass": "Grass",
+    "electric": "Electric",
+    "ice": "Ice",
+    "fighting": "Fighting",
+    "poison": "Poison",
+    "ground": "Ground",
+    "flying": "Flying",
+    "psychic": "Psychic",
+    "bug": "Bug",
+    "rock": "Rock",
+    "ghost": "Ghost",
+    "dragon": "Dragon",
+    "dark": "Dark",
+    "steel": "Steel",
+    "fairy": "Fairy"
 }
