--- a/src/utils/internationalization/langs/es.json
+++ b/src/utils/internationalization/langs/es.json
@@ -1,3 +1,23 @@
 {
-    "title": "La Pokédex"
+    "title": "Pokédex",
+    "HomeFeaturedPokemon": "El Pokémon destacado de hoy",
+    
+    "normal": "Normal",
+    "fire": "Fuego",
+    "water": "Agua",
+    "grass": "Planta",
+    "electric": "Eléctrico",
+    "ice": "Hielo",
+    "fighting": "Lucha",
+    "poison": "Veneno",
+    "ground": "Tierra",
+    "flying": "Volador",
+    "psychic": "Psíquico",
+    "bug": "Bicho",
+    "rock": "Roca",
+    "ghost": "Fantasma",
+    "dragon": "Dragón",
+    "dark": "Siniestro",
+    "steel": "Acero",
+    "fairy": "Hada"
 }
