add stats panel component

--- a/src/utils/internationalization/langs/en.json
+++ b/src/utils/internationalization/langs/en.json
@@ -2,6 +2,7 @@
     "title": "The Pokedex",
 
     "HomeFeaturedPokemon": "Featured Pokemon today",
+    "HomeStatsTitle": "Statistics",
     
     "normal": "Normal",
     "fire": "Fire",
