--- a/src/utils/internationalization/langs/es.json
+++ b/src/utils/internationalization/langs/es.json
@@ -1,6 +1,7 @@
 {
     "title": "Pokédex",
     "HomeFeaturedPokemon": "El Pokémon destacado de hoy",
+    "HomeStatsTitle": "Estadísticas",
     
     "normal": "Normal",
     "fire": "Fuego",
