--- a/src/utils/internationalization/langs/en.json
+++ b/src/utils/internationalization/langs/en.json
@@ -3,6 +3,10 @@
 
     "HomeFeaturedPokemon": "Featured Pokemon today",
     "HomeStatsTitle": "Statistics",
+
+    "SearchTitle": "Pokedex",
+    "SearchGenerationTitle": "Generation {generation}",
+    "SearchGenerationSubtitle": "Region {region}",
     
     "normal": "Normal",
     "fire": "Fire",
