wip add list of pokemons

--- a/src/utils/internationalization/langs/en.json
+++ b/src/utils/internationalization/langs/en.json
@@ -5,8 +5,8 @@
     "HomeStatsTitle": "Statistics",
 
     "SearchTitle": "Pokedex",
-    "SearchGenerationTitle": "Generation {generation}",
-    "SearchGenerationSubtitle": "Region {region}",
+    "SearchGenerationTitle": "List of Pokemons",
+    "SearchGenerationSubtitle": "Region {{region}}",
     
     "normal": "Normal",
     "fire": "Fire",
