--- a/src/utils/internationalization/langs/es.json
+++ b/src/utils/internationalization/langs/es.json
@@ -5,8 +5,8 @@
     "HomeStatsTitle": "Estadísticas",
 
     "SearchTitle": "Pokédex",
-    "SearchGenerationTitle": "Generación {generation}",
-    "SearchGenerationSubtitle": "Región {region}",
+    "SearchGenerationTitle": "Listado de Pokémones",
+    "SearchGenerationSubtitle": "Región {{region}}",
     
     "normal": "Normal",
     "fire": "Fuego",
